--- a/src/styles.css
+++ b/src/styles.css
@@ -11,11 +11,36 @@ html, body {
 
 main {
   margin: auto;
-  width: 50%;
+  max-width: 90%;
   padding: 20px;
 }
 
 main > h1 {
   text-align: center;
-  font-size: 3.5em;
+  font-size: 1.5em;
+}
+
+textarea
+{
+  width:100%;
+  min-height:200px;
+}
+
+#submission
+{
+  width:45%;
+  float:left;
+  background-color: #eeeeee;
+}
+#response
+{
+  width:45%;
+  float:right;
+  background-color: #dddddd;
+  min-height:220px;
+}
+
+#refresh
+{
+  margin-left:2em; 
 }
