--- a/src/styles.css
+++ b/src/styles.css
@@ -6,19 +6,79 @@ html, body {
   margin: 0;
   border: 0;
   padding: 0;
-  background-color: #fff;
+  background-color: #000;
+  color:#eeeeee;
+}
+
+label{
+  color:#8fbfbf;
+}
+
+
+p
+{
+  margin-bottom:.25em;
+  margin-top:1em;
+}
+
+.hb
+{
+  margin-top:.25em;
 }
 
 main {
   margin: auto;
-  max-width: 90%;
-  padding: 20px;
+  min-width:700px;
+  max-width: 900px;
+  
+  padding: 20px 20px 200px 20px;
+
 }
 
-main > h1 {
+h1 {
   text-align: center;
-  font-size: 1.5em;
+  font-size: 1.25em;
+  background-color: #222222;
+  margin:0;
+  padding:.5em;
 }
+
+h2
+{
+  border-bottom: solid 2px #eeeeee;
+  padding-bottom: .2em;
+  font-size:1.25em;
+}
+
+h2 span
+{
+  margin-left:2em;
+  font-size:.75em;
+  font-weight: normal;
+}
+
+
+a , a:visited,  a:hover
+{
+  color:#b7f8bf;
+}
+
+#notice
+{
+  text-align: center;
+  max-width:80%;
+  margin:1em auto 2em auto;
+  background-color: #444444;
+  padding:.5em 1em;
+}
+
+#feedback
+{
+  background-color: #cccccc;
+  width:100%;
+  min-height:100px;
+}
+
 
 textarea
 {
@@ -28,15 +88,15 @@ textarea
 
 #submission
 {
-  width:45%;
+  width:48%;
   float:left;
-  background-color: #eeeeee;
+  background-color: #222222;
 }
 #response
 {
-  width:45%;
+  width:48%;
   float:right;
-  background-color: #dddddd;
+  background-color: #222222;
   min-height:220px;
 }
 
@@ -44,3 +104,80 @@ textarea
 {
   margin-left:2em; 
 }
+
+button {
+  appearance: none;
+  background-color: #408080;
+  border: 1px solid rgba(27, 31, 35, .15);
+  border-radius: 2em;
+  box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  padding: 6px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+.help
+{
+  border-radius: 1em;
+  padding: .0em .7em;
+  font-size: .7em;
+}
+
+table
+{
+  margin:1em 0;
+}
+
+td
+{
+  font-size:1em;
+}
+
+#refreshing
+{
+  margin-left:2em;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+}
+
+.popup {
+  margin: 70px auto;
+  padding: 20px 5em 20px 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 30%;
+  position: relative;
+  color:#000;
+}
+
+
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+    
+}
+
